# cloud-hypervisor

./: .bazelrc  .editorconfig  .gitignore  .gitlint  .lychee.toml  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  .travis.yml  .typos.toml  AGENTS.md  BUILD  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Jenkinsfile  LICENSE  MAINTAINERS.md  MODULE.bazel  Makefile  README.md  SECURITY.md  WORKSPACE  build.rs  cargo-bazel-lock.json  clippy.toml  release-notes.md  setup-form-vmm.sh  setup.sh
.cargo/: config
api-types/: Cargo.toml
api-types/src/: lib.rs  migration.rs  restore.rs  vm_coredump.rs  vm_info.rs  vm_remove_device.rs  vm_resize.rs  vm_resize_disk.rs  vm_resize_zone.rs  vm_snapshot.rs  vm_state.rs  vmm_ping_response.rs
api-types/src/vm_config/: balloon_config.rs  console_config.rs  cpus_config.rs  device_config.rs  disk_config.rs  fs_config.rs  fw_cfg_config.rs  generic_vhost_user_config.rs  ivshmem_config.rs  landlock_config.rs  memory_config.rs  mod.rs  net_config.rs  numa_config.rs  payload_config.rs  pci_device_common_config.rs  pci_segment_config.rs  platform_config.rs  pmem_config.rs  rate_limiter_group_config.rs  rng_config.rs  rtc_config.rs  tpm_config.rs  user_device_config.rs  vdpa_config.rs  vsock_config.rs
arch/: BUILD  Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: cache.rs  fdt.rs  gic.rs  gicv2.rs  gicv3.rs  gicv3_its.rs  layout.rs  mod.rs  regs.rs  uefi.rs
arch/src/riscv64/: fdt.rs  layout.rs  mod.rs  uefi.rs
arch/src/x86_64/: acpi.rs  arch_capabilities_checks.rs  cpu_profile.rs  cpu_profile_generation.rs  gdt.rs  general_purpose_helper_fns.rs  helpers.rs  hyperv_msrs.rs  interrupts.rs  layout.rs  mod.rs  mpspec.rs  mptable.rs  regs.rs  smbios.rs
block/: BUILD  Cargo.toml
block/src/: aligned_buffer.rs  aligned_file.rs  aligned_operation.rs  async_io.rs  destructor_clear.rs  disk_file.rs  error.rs  factory.rs  fcntl.rs  fixed_vhd.rs  fixed_vhd_async.rs  fixed_vhd_disk.rs  fixed_vhd_sync.rs  lib.rs  qcow_async.rs  qcow_common.rs  qcow_disk.rs  qcow_sync.rs  raw_async.rs  raw_async_aio.rs  raw_async_io_tests.rs  raw_disk.rs  raw_sync.rs  request.rs  sparse.rs  vhd.rs  vhdx_sync.rs
block/src/async_io/: aio_data_io.rs  common.rs  guest_memory_target.rs  operation.rs  uring_data_io.rs
block/src/engine/: aio.rs  io_uring.rs  mod.rs  tracker.rs  wrapper.rs
block/src/formats/: mod.rs
block/src/io/: async_io.rs  fcntl.rs  mod.rs  request.rs
block/src/qcow/: backing.rs  decoder.rs  header.rs  metadata.rs  mod.rs  qcow_raw_file.rs  raw_file.rs  refcount.rs  util.rs  vec_cache.rs
block/src/vhdx/: mod.rs  vhdx_bat.rs  vhdx_header.rs  vhdx_io.rs  vhdx_metadata.rs
block_util/: Cargo.toml
block_util/src/: async_io.rs  fixed_vhd.rs  fixed_vhd_async.rs  fixed_vhd_sync.rs  lib.rs  qcow_sync.rs  raw_async.rs  raw_sync.rs  vhd.rs  vhdx_sync.rs
cloud-hypervisor/: Cargo.toml  build.rs
cloud-hypervisor/src/: lib.rs  logger.rs  main.rs  test_util.rs
cloud-hypervisor/tests/: integration.rs  integration_aarch64_acpi.rs  integration_common_parallel.rs  integration_common_sequential.rs  integration_cvm.rs  integration_dbus_api.rs  integration_fw_cfg.rs  integration_ivshmem.rs  integration_live_migration.rs  integration_rate_limiter.rs  integration_vfio.rs  integration_windows.rs
cloud-hypervisor/tests/common/: live_migration.rs  mod.rs  snapshot_restore_common.rs  tests_wrappers.rs  utils.rs
devices/: BUILD  Cargo.toml
devices/src/: acpi.rs  aia.rs  bus.rs  debug_console.rs  gic.rs  i8042.rs  interrupt_controller.rs  ioapic.rs  ivshmem.rs  lib.rs  pvmemcontrol.rs  pvpanic.rs  serial.rs  tpm.rs
devices/src/legacy/: cmos.rs  debug_port.rs  fw_cfg.rs  fwdebug.rs  gpio_pl061.rs  guest_event.rs  i8042.rs  mod.rs  rtc_pl031.rs  serial.rs  serial_buffer.rs  uart_pl011.rs  uio.rs
event_monitor/: BUILD  Cargo.toml
event_monitor/src/: lib.rs
hvf-vmm/: Cargo.toml  build.rs  guest.s  run.sh
hvf-vmm/src/: eventfd.rs  hvf.rs  main.rs  snapshot.rs  uart.rs
hypervisor/: BUILD  Cargo.toml
hypervisor/src/: compat.rs  cpu.rs  device.rs  hypervisor.rs  lib.rs  mmap.rs  vm.rs
hypervisor/src/arch/: mod.rs
hypervisor/src/generic_x86_64/: mod.rs
hypervisor/src/hvf/: ffi.rs  gic.rs  mod.rs  rehydrate.rs  translate.rs
hypervisor/tests/: hvf_boot.rs
net_util/: BUILD  Cargo.toml
net_util/src/: ctrl_queue.rs  lib.rs  mac.rs  net_io_uring.rs  open_tap.rs  queue_pair.rs  tap.rs
offload_daemon/: Cargo.toml
offload_daemon/src/: main.rs
otel/: Cargo.toml
otel/src/: lib.rs  logger.rs  tracer.rs
pci/: BUILD  Cargo.toml
pci/src/: bus.rs  configuration.rs  device.rs  lib.rs  mmap.rs  msi.rs  msix.rs  root.rs  root_port.rs  vfio.rs  vfio_user.rs
performance-metrics/: Cargo.toml  build.rs
performance-metrics/src/: main.rs  micro_bench_block.rs  performance_tests.rs  util.rs
qcow/: Cargo.toml
qcow/src/: qcow.rs  qcow_raw_file.rs  raw_file.rs  refcount.rs  vec_cache.rs
rate_limiter/: BUILD  Cargo.toml
rate_limiter/src/: group.rs  lib.rs
serializable_fd/: Cargo.toml
serializable_fd/src/: fd.rs  fd_device.rs  fd_map.rs  fd_serialization.rs  lib.rs
test_infra/: Cargo.toml
test_infra/src/: lib.rs
tpm/: BUILD  Cargo.toml
tpm/src/: emulator.rs  lib.rs  socket.rs
tracer/: BUILD  Cargo.toml
tracer/src/: lib.rs  tracer.rs  tracer_noop.rs
vfio/: Cargo.toml
vfio-ioctls/: Cargo.toml
vfio-ioctls/src/: dma_mapping.rs  lib.rs  vfio_device.rs
vfio/src/: lib.rs  vfio_device.rs  vfio_ioctls.rs  vfio_pci.rs
vfio_user/: Cargo.toml
vfio_user/src/: lib.rs
vhdx/: Cargo.toml
vhdx/src/: lib.rs  vhdx.rs  vhdx_bat.rs  vhdx_header.rs  vhdx_io.rs  vhdx_metadata.rs
vhost_rs/: Cargo.toml  README.md
vhost_rs/src/: backend.rs  lib.rs  vsock.rs
vhost_user_backend/: Cargo.toml
vhost_user_backend/src/: lib.rs
vhost_user_block/: BUILD  Cargo.toml
vhost_user_block/src/: lib.rs  main.rs
vhost_user_fs/: Cargo.toml
vhost_user_fs/src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  fs_cache_req_handler.rs  fuse.rs  lib.rs  main.rs  multikey.rs  passthrough.rs  sandbox.rs  seccomp.rs  server.rs
(+630 files in other folders)
