# Cloud Hypervisor Workspace
#
# The main crate producing the binaries is in `./cloud-hypervisor`.

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.profiling]
debug = true
inherits = "release"
strip = false

[workspace]
members = [
  "api_client",
  "arch",
  "block",
  "cloud-hypervisor",
  "devices",
  "event_monitor",
  "hypervisor",
  "net_gen",
  "net_util",
  "option_parser",
  "pci",
  "performance-metrics",
  "rate_limiter",
  "serial_buffer",
  "test_infra",
  "tracer",
  "vhost_user_block",
  "vhost_user_net",
  "virtio-devices",
  "vm-allocator",
  "vm-device",
  "vm-migration",
  "vm-virtio",
  "vmm",
]
package.edition = "2024"
resolver = "3"

[workspace.dependencies]
# rust-vmm crates
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", branch = "main" }
kvm-bindings = "0.12.1"
kvm-ioctls = "0.22.1"
linux-loader = "0.13.1"
mshv-bindings = "0.6.6"
mshv-ioctls = "0.6.6"
seccompiler = "0.5.0"
vfio-bindings = { version = "0.6.0", default-features = false }
vfio-ioctls = { version = "0.5.1", default-features = false }
vfio_user = { version = "0.1.1", default-features = false }
vhost = { version = "0.14.0", default-features = false }
vhost-user-backend = { version = "0.20.0", default-features = false }
virtio-bindings = "0.2.6"
virtio-queue = "0.16.0"
vm-fdt = "0.3.0"
vm-memory = "0.16.1"
vmm-sys-util = "0.14.0"

# igvm crates
# TODO: bump to 0.3.5 release
igvm = { git = "https://github.com/microsoft/igvm", branch = "main" }
igvm_defs = { git = "https://github.com/microsoft/igvm", branch = "main" }

# serde crates
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = { version = "3.16.1", default-features = false }

# other crates
anyhow = "1.0.99"
bitflags = "2.10.0"
byteorder = "1.5.0"
cfg-if = "1.0.4"
clap = "4.5.54"
dhat = "0.3.3"
dirs = "6.0.0"
env_logger = "0.11.8"
epoll = "4.4.0"
flume = "0.12.0"
itertools = "0.14.0"
libc = "0.2.180"
log = "0.4.29"
signal-hook = "0.4.3"
thiserror = "2.0.18"
uuid = { version = "1.20.0" }
wait-timeout = "0.2.1"
zerocopy = { version = "0.8.34", default-features = false }

[workspace.lints.clippy]
# Any clippy lint (group) in alphabetical order:
# https://rust-lang.github.io/rust-clippy/master/index.html

# Groups
all = "deny"         # shorthand for the other groups but here for compleness
complexity = "deny"
correctness = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

# Individual Lints
assertions_on_result_states = "deny"
if_not_else = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
semicolon_if_nothing_returned = "deny"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"

[workspace.lints.rust]
# `level = warn` is irrelevant here but mandatory for rustc/cargo
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(devcli_testenv)'] }
