###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_rust", version = "0.45.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "acpi-tables",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = ["//patches:acpi-tables.patch"],
    sha256 = "288631399bf1211a2cdabf4974e7af915684224bc3f3d174b8acce6314a8b49a",
    strip_prefix = "acpi_tables-849d5950196f66dd10f2b2606d8fe8c7cb39ec24",
    urls = [
        "https://github.com/rust-vmm/acpi_tables/archive/849d5950196f66dd10f2b2606d8fe8c7cb39ec24.zip",
    ],
)

http_archive(
    name = "micro-http",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = ["//patches:micro-http.patch"],
    sha256 = "fa4ebc9cdb6beb5e0dea3272d7e4b051f4c9650cb694743a737fbcdd4ad24727",
    strip_prefix = "micro-http-8182cd5523b63ceb52ad9d0e7eb6fb95683e6d1b",
    urls = [
        "https://github.com/firecracker-microvm/micro-http/archive/8182cd5523b63ceb52ad9d0e7eb6fb95683e6d1b.zip",
    ],
)

http_archive(
    name = "vfio",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = ["//patches:vfio-ioctls.patch"],
    sha256 = "4b2de558321a771c0b1c0175a972c84cf998f6ab76aae90a3f35547f135fc968",
    strip_prefix = "vfio-a51a4746b0d317bfc21fa49d40f9287f3b8137fd",
    urls = [
        "https://github.com/rust-vmm/vfio/archive/a51a4746b0d317bfc21fa49d40f9287f3b8137fd.zip",
    ],
)

http_archive(
    name = "vfio-user",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = ["//patches:vfio-user.patch"],
    sha256 = "2f4492f382e649032f6474a01c3d6ff80bf4e4b8d16e4b3ccdd2ade783231266",
    strip_prefix = "vfio-user-a1f6e52829e069b6d698b2cfeecac742e4653186",
    urls = [
        "https://github.com/rust-vmm/vfio-user/archive/a1f6e52829e069b6d698b2cfeecac742e4653186.zip",
    ],
)

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.94",
)
crate.spec(
    package = "arc-swap",
    version = "1.7.1",
)
crate.spec(
    package = "bitflags",
    version = "2.6.0",
)
crate.spec(
    package = "bitfield",
    version = "0.16.1",
)
crate.spec(
    package = "byteorder",
    version = "1.5.0",
)
crate.spec(
    package = "cfg-if",
    version = "1.0.0",
)
crate.spec(
    features = [
        "cargo",
        "string",
        "wrap_help",
    ],
    package = "clap",
    version = "4.5.13",
)
crate.spec(
    package = "clap_derive",
    version = "*",
)
crate.spec(
    package = "concat-idents",
    version = "1.1.5",
)
crate.spec(
    package = "crc-any",
    version = "2.4.4",
)
crate.spec(
    package = "env_logger",
    version = "0.11.3",
)
crate.spec(
    package = "epoll",
    version = "4.3.3",
)
crate.spec(
    package = "io-uring",
    version = "0.6.4",
)
crate.spec(
    package = "igvm",
    version = "0.3.3",
)
crate.spec(
    package = "igvm_defs",
    version = "0.3.3",
)
crate.spec(
    package = "fdt",
    version = "0.1.5",
)
crate.spec(
    package = "flume",
    version = "0.11.1",
)
crate.spec(
    package = "getrandom",
    version = "0.3.1",
)
crate.spec(
    package = "hex",
    version = "0.4.3",
)
crate.spec(
    features = ["serde"],
    package = "kvm-bindings",
    version = "0.10.0",
)
crate.spec(
    package = "kvm-ioctls",
    version = "0.19.1",
)
crate.spec(
    package = "landlock",
    version = "0.4.0",
)
crate.spec(
    package = "syn",
    version = "2.0.87",
)
crate.spec(
    package = "quote",
    version = "1.0.36",
)
crate.spec(
    package = "libc",
    version = "0.2.167",
)
crate.spec(
    features = [
        "bzimage",
        "elf",
        "pe",
    ],
    package = "linux-loader",
    version = "0.13.0",
)
crate.spec(
    package = "log",
    version = "0.4.22",
)
crate.spec(
    package = "once_cell",
    version = "1.20.2",
)
crate.spec(
    package = "range_map_vec",
    version = "0.2.0",
)
crate.spec(
    package = "remain",
    version = "0.2.14",
)
crate.spec(
    package = "seccompiler",
    version = "0.4.0",
)
crate.spec(
    features = [
        "derive",
        "rc",
    ],
    package = "serde",
    version = "1.0.208",
)
crate.spec(
    package = "serde_derive",
    version = "1.0.208",
)
crate.spec(
    package = "serde_json",
    version = "1.0.120",
)
crate.spec(
    features = [
        "macros",
    ],
    package = "serde_with",
    version = "3.9.0",
)
crate.spec(
    package = "signal-hook",
    version = "0.3.17",
)
crate.spec(
    package = "smallvec",
    version = "1.13.2",
)
crate.spec(
    package = "thiserror",
    version = "2.0.6",
)
crate.spec(
    features = [
        "v4",
    ],
    package = "uuid",
    version = "1.12.1",
)
crate.spec(
    features = ["vfio-v5_0_0"],
    package = "vfio-bindings",
    version = "0.3.1",
)
crate.spec(
    features = [
        "vhost-kern",
        "vhost-user-backend",
        "vhost-user-frontend",
        "vhost-vdpa",
    ],
    package = "vhost",
    version = "0.13.0",
)
crate.spec(
    package = "vhost-user-backend",
    version = "0.17.0",
)
crate.spec(
    features = [
        "virtio-v5_0_0",
    ],
    package = "virtio-bindings",
    version = "0.2.5",
)
crate.spec(
    package = "virtio-queue",
    version = "0.14.0",
)
crate.spec(
    package = "vm-fdt",
    version = "0.3.0",
)
crate.spec(
    features = [
        "arc-swap",
        "backend-atomic",
        "backend-mmap",
        "backend-bitmap",
    ],
    package = "vm-memory",
    version = "0.16.1",
)
crate.spec(
    features = ["with-serde"],
    package = "vmm-sys-util",
    version = "0.12.1",
)
crate.spec(
    features = [
        "alloc",
        "derive",
    ],
    package = "zerocopy",
    version = "0.7.35",
)
crate.from_specs()
use_repo(crate, "crates")
