[package]
authors = ["The Cloud Hypervisor Authors"]
edition.workspace = true
license = "Apache-2.0"
name = "api-types"
rust-version.workspace = true
version = "0.1.0"

[features]
fw_cfg = []
pvmemcontrol = []

[dependencies]
arch = { path = "../arch" }
log = { workspace = true }
option_parser = { path = "../option_parser" }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
