[package]
authors = ["The Chromium OS Authors"]
edition.workspace = true
name = "arch"
version = "0.1.0"

# TODO: Consider making this a binary of the main package instead
[[bin]]
name = "generate-cpu-profile"
path = "src/bin/generate-cpu-profile.rs"
required-features = ["cpu_profile_generation"]

[features]
default = []
fw_cfg = []
kvm = ["hypervisor/kvm"]
sev_snp = []
tdx = []
# Currently cpu profiles can only be generated with KVM
cpu_profile_generation = ["kvm", "dep:clap"]

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true, optional = true }
hypervisor = { path = "../hypervisor" }
libc = { workspace = true }
linux-loader = { workspace = true, features = ["bzimage", "elf", "pe"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
# We currently use this for (de-)serializing CPU profile data
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vm-memory = { workspace = true, features = ["backend-bitmap", "backend-mmap"] }
vmm-sys-util = { workspace = true, features = ["with-serde"] }

[target.'cfg(any(target_arch = "aarch64", target_arch = "riscv64"))'.dependencies]
fdt_parser = { version = "0.1.5", package = "fdt" }
vm-fdt = { workspace = true }

# Use this to test our custom serialization logic
[dev-dependencies]
proptest = "1.0.0"
serde_json = { workspace = true }

[lints]
workspace = true
