[package]
authors = ["The Chromium OS Authors", "The Cloud Hypervisor Authors"]
edition.workspace = true
name = "block"
rust-version.workspace = true
version = "0.1.0"

[features]
default = []
io_uring = ["dep:io-uring"]
test-utils = []

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
crc-any = "3.0.0"
flate2 = "1.1"
io-uring = { version = "0.7.12", optional = true }
libc = { workspace = true }
log = { workspace = true }
remain = "0.2.15"
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = [
  "backend-atomic",
  "backend-bitmap",
  "backend-mmap",
] }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }
zstd = "0.13"

[dev-dependencies]
cfg-if = { workspace = true }

[lints]
workspace = true
