[package]
authors = ["The Chromium OS Authors"]
edition = "2021"
name = "devices"
version = "0.1.0"

[dependencies]
acpi_tables = { workspace = true }
anyhow.workspace = true
arch = { path = "../arch" }
bitflags.workspace = true
byteorder.workspace = true
event_monitor = { path = "../event_monitor" }
hypervisor = { path = "../hypervisor" }
libc.workspace = true
log.workspace = true
num_enum = "0.7.2"
pci = { path = "../pci" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tpm = { path = "../tpm" }
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { workspace = true, features = [
  "backend-atomic",
  "backend-bitmap",
  "backend-mmap",
] }
vm-migration = { path = "../vm-migration" }
vmm-sys-util = { workspace = true }

[target.'cfg(any(target_arch = "aarch64", target_arch = "riscv64"))'.dependencies]
arch = { path = "../arch" }

[features]
default = []
kvm = ["arch/kvm"]
pvmemcontrol = []
