[package]
authors = ["The Cloud Hypervisor Authors"]
edition.workspace = true
name = "event_monitor"
version = "0.1.0"

[dependencies]
flume = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

[lints]
workspace = true
