[package]
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"
name = "hypervisor"
version = "0.1.0"

[features]
kvm = ["kvm-bindings", "kvm-ioctls", "vfio-ioctls/kvm"]
mshv = ["iced-x86", "mshv-bindings", "mshv-ioctls", "vfio-ioctls/mshv"]
sev_snp = ["igvm", "igvm_defs"]
tdx = []

[dependencies]
anyhow = "1.0.87"
byteorder = "1.5.0"
cfg-if = "1.0.0"
concat-idents = "1.1.5"
igvm = { version = "0.3.3", optional = true }
igvm_defs = { version = "0.3.1", optional = true }
kvm-bindings = { workspace = true, optional = true, features = ["serde"] }
kvm-ioctls = { workspace = true, optional = true }
libc = "0.2.158"
log = "0.4.22"
mshv-bindings = { workspace = true, features = [
  "fam-wrappers",
  "with-serde",
], optional = true }
mshv-ioctls = { workspace = true, optional = true }
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_with = { version = "3.9.0", default-features = false, features = [
  "macros",
] }
thiserror = "1.0.62"
vfio-ioctls = { workspace = true, default-features = false }
vm-memory = { workspace = true, features = ["backend-atomic", "backend-mmap"] }
vmm-sys-util = { workspace = true, features = ["with-serde"] }

[target.'cfg(target_arch = "x86_64")'.dependencies.iced-x86]
default-features = false
features = ["decoder", "fast_fmt", "instr_info", "op_code_info", "std"]
optional = true
version = "1.21.0"

[dev-dependencies]
env_logger = "0.11.3"
